--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -1232,6 +1232,7 @@ msgstr ""
 
 #: corehq/apps/accounting/templates/accounting/email/bulk_payment_receipt.html
 #: corehq/apps/accounting/templates/accounting/email/credit_receipt.html
+#: corehq/apps/accounting/templates/accounting/email/invoice_autopay_setup.html
 #: corehq/apps/accounting/templates/accounting/email/invoice_receipt.html
 msgid ""
 "\n"
@@ -1484,7 +1485,7 @@ msgstr ""
 msgid ""
 "\n"
 "        To view the full billing statement, log into your project space on\n"
-"        CommCareHQ and navigate to <a href=\"%(statements_url)s\">\n"
+"        CommCare HQ and navigate to <a href=\"%(statements_url)s\">\n"
 "        Billing Statements</a>.\n"
 "      "
 msgstr ""
@@ -1495,7 +1496,7 @@ msgstr ""
 msgid ""
 "\n"
 "        Your project's administrator can view the full billing statement by\n"
-"        logging into your project space on CommCareHQ and navigating to\n"
+"        logging into your project space on CommCare HQ and navigating to\n"
 "        <a href=\"%(statements_url)s\">Billing Statements</a>.\n"
 "      "
 msgstr ""
@@ -1545,7 +1546,7 @@ msgstr ""
 msgid ""
 "\n"
 "        To view and pay invoices, you can log into your project space on\n"
-"        CommCareHQ and navigate to <a href=\"%(statements_url)s\">Billing "
+"        CommCare HQ and navigate to <a href=\"%(statements_url)s\">Billing "
 "Statements</a>.\n"
 "      "
 msgstr ""
@@ -1557,7 +1558,7 @@ msgid ""
 "\n"
 "        To view and pay invoices, your project's administrator can log into "
 "your project space on\n"
-"        CommCareHQ and navigate to <a href=\"%(statements_url)s\">Billing "
+"        CommCare HQ and navigate to <a href=\"%(statements_url)s\">Billing "
 "Statements</a>.\n"
 "      "
 msgstr ""
@@ -1638,7 +1639,8 @@ msgstr ""
 msgid ""
 "\n"
 "        To view the full billing statement, log into your project space on\n"
-"        CommCareHQ and navigate to Billing Statements at %(statements_url)s\n"
+"        CommCare HQ and navigate to Billing Statements at "
+"%(statements_url)s\n"
 "        "
 msgstr ""
 
@@ -1648,7 +1650,7 @@ msgstr ""
 msgid ""
 "\n"
 "        Your project's administrator can view the full billing statement by\n"
-"        logging into your project space on CommCareHQ and navigating to\n"
+"        logging into your project space on CommCare HQ and navigating to\n"
 "        Billing Statements at %(statements_url)s\n"
 "        "
 msgstr ""
@@ -1696,7 +1698,8 @@ msgstr ""
 msgid ""
 "\n"
 "        To view and pay invoices, you can log into your project space on\n"
-"        CommCareHQ and navigate to Billing Statements at %(statements_url)s\n"
+"        CommCare HQ and navigate to Billing Statements at "
+"%(statements_url)s\n"
 "        "
 msgstr ""
 
@@ -1707,7 +1710,8 @@ msgid ""
 "\n"
 "        To view and pay invoices, your project's administrator can log into "
 "your project space on\n"
-"        CommCareHQ and navigate to Billing Statements at %(statements_url)s\n"
+"        CommCare HQ and navigate to Billing Statements at "
+"%(statements_url)s\n"
 "        "
 msgstr ""
 
@@ -2054,15 +2058,6 @@ msgid ""
 "  "
 msgstr ""
 
-#: corehq/apps/accounting/templates/accounting/email/invoice_autopay_setup.html
-msgid ""
-"\n"
-"    Best Regards,<br />\n"
-"    The CommCareHQ Team<br />\n"
-"    <a href=\"http://www.commcarehq.org/\">www.commcarehq.org</a>\n"
-"  "
-msgstr ""
-
 #: corehq/apps/accounting/templates/accounting/email/invoice_autopayment.html
 #, python-format
 msgid ""
@@ -2071,7 +2066,7 @@ msgid ""
 "    with the last four digits %(last_4)s. Your credit card will "
 "automatically\n"
 "    be charged on %(date_due)s. You can alter this\n"
-"    setting by logging into your project space on CommCareHQ and navigating "
+"    setting by logging into your project space on CommCare HQ and navigating "
 "to\n"
 "    <a href=\"%(statements_url)s\">Billing Statements</a>.\n"
 "  "
@@ -2103,7 +2098,7 @@ msgid ""
 "    with the last four digits %(last_4)s. Your credit card will "
 "automatically\n"
 "    be charged on %(date_due)s. You can alter this\n"
-"    setting by logging into your project space on CommCareHQ and navigating "
+"    setting by logging into your project space on CommCare HQ and navigating "
 "to\n"
 "    Billing Statements.\n"
 msgstr ""
@@ -12109,7 +12104,7 @@ msgid ""
 "\n"
 "                              The field label that users will see when "
 "adding or editing\n"
-"                              a %(entity_string)s in CommCareHQ.\n"
+"                              a %(entity_string)s in CommCare HQ.\n"
 "                            "
 msgstr ""
 
@@ -13051,7 +13046,7 @@ msgstr ""
 #: corehq/apps/data_interfaces/templates/data_interfaces/list_automatic_update_rules.html
 msgid ""
 "\n"
-"          Automatically update or close cases from CommCareHQ\n"
+"          Automatically update or close cases from CommCare HQ\n"
 "        "
 msgstr ""
 
@@ -13059,7 +13054,7 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"          Create rules for updating or closing cases from CommCareHQ.\n"
+"          Create rules for updating or closing cases from CommCare HQ.\n"
 "          All rules run every day at %(time)s GMT.\n"
 "          For more information, see the <a href=\"%(help_site_url)s\">Help "
 "Site</a>.\n"
@@ -14056,21 +14051,6 @@ msgstr ""
 
 #: corehq/apps/domain/forms.py
 msgid "Disable Google Analytics"
-msgstr ""
-
-#: corehq/apps/domain/forms.py
-msgid "Restrict Mobile Endpoint Access"
-msgstr ""
-
-#: corehq/apps/domain/forms.py
-msgid ""
-"When this setting is turned on, the Roles and Permissions page will display "
-"a new \"Mobile App Access\" option under \"Other Settings.\" With this "
-"permission disabled, the user account will be unable to login or sync from a "
-"mobile application, and will only be able to use apps via the Web Apps "
-"interface.<a href='https://help.commcarehq.org/display/commcarepublic/Project"
-"+Space+Settings'> Read more about restricting mobile endpoint access here.</"
-"a>"
 msgstr ""
 
 #: corehq/apps/domain/forms.py
@@ -15302,7 +15282,7 @@ msgstr ""
 #: corehq/apps/domain/templates/domain/email/domain_invite.html
 msgid ""
 "\n"
-"    CommCareHQ is a data management tool used by over 500 organizations\n"
+"    CommCare HQ is a data management tool used by over 500 organizations\n"
 "    to help frontline workers around the world.\n"
 "    <a href=\"https://dimagi.com/commcare/\" style=\"color: #bcdeff;\">Learn "
 "more about CommCare</a>.\n"
@@ -15329,7 +15309,7 @@ msgstr ""
 msgid ""
 "\n"
 "    %(inviter)s has invited you to join the %(domain)s project space at "
-"CommCareHQ.\n"
+"CommCare HQ.\n"
 "    This invitation expires in %(days)s day(s).\n"
 msgstr ""
 
@@ -15343,7 +15323,7 @@ msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_invite.txt
 msgid ""
-"CommCareHQ is a data management tool used by over 500 organizations to help "
+"CommCare HQ is a data management tool used by over 500 organizations to help "
 "frontline workers around the world."
 msgstr ""
 
@@ -15352,7 +15332,7 @@ msgid ""
 "\n"
 "    If you think you have received this by mistake, you can go ahead and "
 "ignore this email.\n"
-"    To find out more about CommCareHQ visit http://www.commcarehq.org/.\n"
+"    To find out more about CommCare HQ visit http://www.commcarehq.org/.\n"
 msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_invite.txt
@@ -15362,7 +15342,7 @@ msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_invite.txt
 #: corehq/apps/domain/templates/domain/email/domain_request_approval.txt
-msgid "-The CommCareHQ team"
+msgid "-The CommCare HQ team"
 msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_request_approval.html
@@ -15425,13 +15405,13 @@ msgstr ""
 msgid ""
 "\n"
 "    %(inviter)s has approved your request to join the %(domain)s project "
-"space on CommCareHQ.\n"
+"space on CommCare HQ.\n"
 "    This approval expires in %(days)s day(s).\n"
 msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_request_approval.txt
 msgid ""
-"CommCareHQ is a tool that helps manage frontline workers around the world."
+"CommCare HQ is a tool that helps manage frontline workers around the world."
 msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_request_approval.txt
@@ -15443,7 +15423,7 @@ msgstr ""
 msgid ""
 "\n"
 "    If you think this is a mistake, you can go ahead and ignore this email.\n"
-"    To find out more about CommCareHQ visit http://www.commcarehq.org/.\n"
+"    To find out more about CommCare HQ visit http://www.commcarehq.org/.\n"
 msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_transfer_from_request.html
@@ -15503,8 +15483,8 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"    %(from_username)s has initiatied a transfer of ownership for a "
-"CommCareHQ project space. To accept\n"
+"    %(from_username)s has initiatied a transfer of ownership for a CommCare "
+"HQ project space. To accept\n"
 "    ownership of this project space, please follow <a href=\"%(activate_url)s"
 "\">this link</a>: %(activate_url)s.  If you do not already have a CommCare "
 "user account, you will be required to create one in order to accept "
@@ -15534,7 +15514,7 @@ msgstr ""
 msgid ""
 "\n"
 "    If you think you have received this by mistake, you can go ahead and "
-"ignore this email. To find out more about CommCareHQ visit <a href=\"http://"
+"ignore this email. To find out more about CommCare HQ visit <a href=\"http://"
 "www.commcarehq.org/\">http://www.commcarehq.org/</a>.\n"
 "  "
 msgstr ""
@@ -15543,7 +15523,7 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"%(from_username)s has initiatied a transfer of ownership for a CommCareHQ "
+"%(from_username)s has initiatied a transfer of ownership for a CommCare HQ "
 "project space. To accept ownership of this project space, please follow this "
 "link: %(activate_url)s.  If you do not already have a CommCare user account, "
 "you will be required to create one in order to accept ownership of this "
@@ -15570,7 +15550,7 @@ msgstr ""
 msgid ""
 "\n"
 "If you think you have received this by mistake, you can go ahead and ignore "
-"this email. To find out more about CommCareHQ visit http://www.commcarehq."
+"this email. To find out more about CommCare HQ visit http://www.commcarehq."
 "org/.\n"
 msgstr ""
 
@@ -16863,7 +16843,7 @@ msgstr ""
 msgid ""
 "\n"
 "    Thanks, <br />\n"
-"    CommCareHQ Team\n"
+"    CommCare HQ Team\n"
 "  "
 msgstr ""
 
@@ -16879,7 +16859,7 @@ msgstr ""
 msgid ""
 "\n"
 "Thanks,\n"
-"CommCareHQ Team\n"
+"CommCare HQ Team\n"
 msgstr ""
 
 #: corehq/apps/dropbox/templates/dropbox/emails/upload_success.html
@@ -22156,10 +22136,6 @@ msgstr ""
 
 #: corehq/apps/hqwebapp/templates/hqwebapp/partials/mobile_ux_warning.html
 msgid "Email Link"
-msgstr ""
-
-#: corehq/apps/hqwebapp/templates/hqwebapp/partials/mobile_ux_warning.html
-msgid "CommCareHQ looks better on desktop!"
 msgstr ""
 
 #: corehq/apps/hqwebapp/templates/hqwebapp/partials/mobile_ux_warning.html
@@ -28550,7 +28526,7 @@ msgstr ""
 msgid ""
 "The privacy and protection of personal data is very important to Dimagi.  "
 "Dimagi is not responsible for privacy of reports or SMS data you transmit "
-"from CommCareHQ to external parties.  However, to protect privacy, we "
+"from CommCare HQ to external parties.  However, to protect privacy, we "
 "suggest that you include a message like the following in your communications "
 "(for instance, by including in the saved report description)"
 msgstr ""
@@ -28705,8 +28681,8 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"      This is a %(report_type)s from <a href=\"%(DNS_name)s\">CommCareHQ</a> "
-"for the project '%(domain)s'.\n"
+"      This is a %(report_type)s from <a href=\"%(DNS_name)s\">CommCare HQ</"
+"a> for the project '%(domain)s'.\n"
 "    "
 msgstr ""
 
@@ -28727,7 +28703,7 @@ msgstr ""
 msgid ""
 "\n"
 "      You are receiving this automated email from <a href=\"%(DNS_name)s"
-"\">CommCareHQ</a>\n"
+"\">CommCare HQ</a>\n"
 "      because the user %(owner_name)s added you as a recipient of their "
 "report.\n"
 "    "
@@ -30736,7 +30712,7 @@ msgid ""
 "\n"
 "  <p>\n"
 "    Thanks,<br />\n"
-"    CommCareHQ\n"
+"    CommCare HQ\n"
 "  </p>\n"
 msgstr ""
 
@@ -31370,6 +31346,18 @@ msgid "Post Logout Redirect URIs"
 msgstr ""
 
 #: corehq/apps/sso/forms.py
+msgid "Sign-in redirect URIs "
+msgstr ""
+
+#: corehq/apps/sso/forms.py
+msgid "Sign-out redirect URIs"
+msgstr ""
+
+#: corehq/apps/sso/forms.py
+msgid "Initiate login URI"
+msgstr ""
+
+#: corehq/apps/sso/forms.py
 msgid "Identifier (Entity ID)"
 msgstr ""
 
@@ -31567,6 +31555,10 @@ msgstr ""
 
 #: corehq/apps/sso/forms.py
 msgid "Issuer URL"
+msgstr ""
+
+#: corehq/apps/sso/forms.py
+msgid "Issuer URI"
 msgstr ""
 
 #: corehq/apps/sso/forms.py
@@ -35266,7 +35258,7 @@ msgid ""
 "\n"
 "  <p>\n"
 "    Thanks,<br />\n"
-"    CommCareHQ\n"
+"    CommCare HQ\n"
 "  </p>\n"
 msgstr ""
 
@@ -35279,7 +35271,7 @@ msgid ""
 "You may now visit %(url)s.\n"
 "\n"
 "Thanks,\n"
-"CommCareHQ\n"
+"CommCare HQ\n"
 msgstr ""
 
 #: corehq/apps/users/templates/users/email/request_domain_access.html
@@ -35297,7 +35289,7 @@ msgid ""
 "\n"
 "  <p>\n"
 "    Thanks,<br />\n"
-"    CommCareHQ\n"
+"    CommCare HQ\n"
 "  </p>\n"
 msgstr ""
 
@@ -35311,7 +35303,7 @@ msgid ""
 "To approve or delete this request, visit %(url)s.\n"
 "\n"
 "Thanks,\n"
-"CommCareHQ\n"
+"CommCare HQ\n"
 msgstr ""
 
 #: corehq/apps/users/templates/users/enterprise_users.html
@@ -35778,6 +35770,14 @@ msgid "Select which reports the role can access:"
 msgstr ""
 
 #: corehq/apps/users/templates/users/partials/edit_role_modal.html
+msgid "Download and Email Reports"
+msgstr ""
+
+#: corehq/apps/users/templates/users/partials/edit_role_modal.html
+msgid "Allow role to download and email report data."
+msgstr ""
+
+#: corehq/apps/users/templates/users/partials/edit_role_modal.html
 msgid "Access Specific Tableau Reports"
 msgstr ""
 
@@ -35895,14 +35895,6 @@ msgstr ""
 
 #: corehq/apps/users/templates/users/partials/edit_role_modal.html
 msgid "Select which other roles can assign this role:"
-msgstr ""
-
-#: corehq/apps/users/templates/users/partials/edit_role_modal.html
-msgid "Download and Email Reports"
-msgstr ""
-
-#: corehq/apps/users/templates/users/partials/edit_role_modal.html
-msgid "Allow role to download and email report data."
 msgstr ""
 
 #: corehq/apps/users/templates/users/partials/manage_my_numbers.html
@@ -38475,7 +38467,7 @@ msgstr ""
 msgid ""
 "\n"
 "                Enter the phone number of a different phone below and click "
-"Send to send a test SMS from CommCareHQ.\n"
+"Send to send a test SMS from CommCare HQ.\n"
 "                "
 msgstr ""
 
@@ -38645,7 +38637,7 @@ msgstr ""
 msgid ""
 "\n"
 "                An error occurred. This can happen if it has been longer "
-"than one week since you started the Telerivet setup process in CommCareHQ.\n"
+"than one week since you started the Telerivet setup process in CommCare HQ.\n"
 "                Please restart the setup process and if the problem "
 "persists, please report an issue.\n"
 "                "
