--- a/locale/hin/LC_MESSAGES/django.po
+++ b/locale/hin/LC_MESSAGES/django.po
@@ -1247,6 +1247,7 @@ msgstr ""
 
 #: corehq/apps/accounting/templates/accounting/email/bulk_payment_receipt.html
 #: corehq/apps/accounting/templates/accounting/email/credit_receipt.html
+#: corehq/apps/accounting/templates/accounting/email/invoice_autopay_setup.html
 #: corehq/apps/accounting/templates/accounting/email/invoice_receipt.html
 msgid ""
 "\n"
@@ -1499,7 +1500,7 @@ msgstr ""
 msgid ""
 "\n"
 "        To view the full billing statement, log into your project space on\n"
-"        CommCareHQ and navigate to <a href=\"%(statements_url)s\">\n"
+"        CommCare HQ and navigate to <a href=\"%(statements_url)s\">\n"
 "        Billing Statements</a>.\n"
 "      "
 msgstr ""
@@ -1510,7 +1511,7 @@ msgstr ""
 msgid ""
 "\n"
 "        Your project's administrator can view the full billing statement by\n"
-"        logging into your project space on CommCareHQ and navigating to\n"
+"        logging into your project space on CommCare HQ and navigating to\n"
 "        <a href=\"%(statements_url)s\">Billing Statements</a>.\n"
 "      "
 msgstr ""
@@ -1560,7 +1561,7 @@ msgstr ""
 msgid ""
 "\n"
 "        To view and pay invoices, you can log into your project space on\n"
-"        CommCareHQ and navigate to <a href=\"%(statements_url)s\">Billing "
+"        CommCare HQ and navigate to <a href=\"%(statements_url)s\">Billing "
 "Statements</a>.\n"
 "      "
 msgstr ""
@@ -1572,7 +1573,7 @@ msgid ""
 "\n"
 "        To view and pay invoices, your project's administrator can log into "
 "your project space on\n"
-"        CommCareHQ and navigate to <a href=\"%(statements_url)s\">Billing "
+"        CommCare HQ and navigate to <a href=\"%(statements_url)s\">Billing "
 "Statements</a>.\n"
 "      "
 msgstr ""
@@ -1653,7 +1654,8 @@ msgstr ""
 msgid ""
 "\n"
 "        To view the full billing statement, log into your project space on\n"
-"        CommCareHQ and navigate to Billing Statements at %(statements_url)s\n"
+"        CommCare HQ and navigate to Billing Statements at "
+"%(statements_url)s\n"
 "        "
 msgstr ""
 
@@ -1663,7 +1665,7 @@ msgstr ""
 msgid ""
 "\n"
 "        Your project's administrator can view the full billing statement by\n"
-"        logging into your project space on CommCareHQ and navigating to\n"
+"        logging into your project space on CommCare HQ and navigating to\n"
 "        Billing Statements at %(statements_url)s\n"
 "        "
 msgstr ""
@@ -1711,7 +1713,8 @@ msgstr ""
 msgid ""
 "\n"
 "        To view and pay invoices, you can log into your project space on\n"
-"        CommCareHQ and navigate to Billing Statements at %(statements_url)s\n"
+"        CommCare HQ and navigate to Billing Statements at "
+"%(statements_url)s\n"
 "        "
 msgstr ""
 
@@ -1722,7 +1725,8 @@ msgid ""
 "\n"
 "        To view and pay invoices, your project's administrator can log into "
 "your project space on\n"
-"        CommCareHQ and navigate to Billing Statements at %(statements_url)s\n"
+"        CommCare HQ and navigate to Billing Statements at "
+"%(statements_url)s\n"
 "        "
 msgstr ""
 
@@ -2069,15 +2073,6 @@ msgid ""
 "  "
 msgstr ""
 
-#: corehq/apps/accounting/templates/accounting/email/invoice_autopay_setup.html
-msgid ""
-"\n"
-"    Best Regards,<br />\n"
-"    The CommCareHQ Team<br />\n"
-"    <a href=\"http://www.commcarehq.org/\">www.commcarehq.org</a>\n"
-"  "
-msgstr ""
-
 #: corehq/apps/accounting/templates/accounting/email/invoice_autopayment.html
 #, python-format
 msgid ""
@@ -2086,7 +2081,7 @@ msgid ""
 "    with the last four digits %(last_4)s. Your credit card will "
 "automatically\n"
 "    be charged on %(date_due)s. You can alter this\n"
-"    setting by logging into your project space on CommCareHQ and navigating "
+"    setting by logging into your project space on CommCare HQ and navigating "
 "to\n"
 "    <a href=\"%(statements_url)s\">Billing Statements</a>.\n"
 "  "
@@ -2118,7 +2113,7 @@ msgid ""
 "    with the last four digits %(last_4)s. Your credit card will "
 "automatically\n"
 "    be charged on %(date_due)s. You can alter this\n"
-"    setting by logging into your project space on CommCareHQ and navigating "
+"    setting by logging into your project space on CommCare HQ and navigating "
 "to\n"
 "    Billing Statements.\n"
 msgstr ""
@@ -12124,7 +12119,7 @@ msgid ""
 "\n"
 "                              The field label that users will see when "
 "adding or editing\n"
-"                              a %(entity_string)s in CommCareHQ.\n"
+"                              a %(entity_string)s in CommCare HQ.\n"
 "                            "
 msgstr ""
 
@@ -13066,7 +13061,7 @@ msgstr ""
 #: corehq/apps/data_interfaces/templates/data_interfaces/list_automatic_update_rules.html
 msgid ""
 "\n"
-"          Automatically update or close cases from CommCareHQ\n"
+"          Automatically update or close cases from CommCare HQ\n"
 "        "
 msgstr ""
 
@@ -13074,7 +13069,7 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"          Create rules for updating or closing cases from CommCareHQ.\n"
+"          Create rules for updating or closing cases from CommCare HQ.\n"
 "          All rules run every day at %(time)s GMT.\n"
 "          For more information, see the <a href=\"%(help_site_url)s\">Help "
 "Site</a>.\n"
@@ -14071,21 +14066,6 @@ msgstr ""
 
 #: corehq/apps/domain/forms.py
 msgid "Disable Google Analytics"
-msgstr ""
-
-#: corehq/apps/domain/forms.py
-msgid "Restrict Mobile Endpoint Access"
-msgstr ""
-
-#: corehq/apps/domain/forms.py
-msgid ""
-"When this setting is turned on, the Roles and Permissions page will display "
-"a new \"Mobile App Access\" option under \"Other Settings.\" With this "
-"permission disabled, the user account will be unable to login or sync from a "
-"mobile application, and will only be able to use apps via the Web Apps "
-"interface.<a href='https://help.commcarehq.org/display/commcarepublic/Project"
-"+Space+Settings'> Read more about restricting mobile endpoint access here.</"
-"a>"
 msgstr ""
 
 #: corehq/apps/domain/forms.py
@@ -15317,7 +15297,7 @@ msgstr ""
 #: corehq/apps/domain/templates/domain/email/domain_invite.html
 msgid ""
 "\n"
-"    CommCareHQ is a data management tool used by over 500 organizations\n"
+"    CommCare HQ is a data management tool used by over 500 organizations\n"
 "    to help frontline workers around the world.\n"
 "    <a href=\"https://dimagi.com/commcare/\" style=\"color: #bcdeff;\">Learn "
 "more about CommCare</a>.\n"
@@ -15344,7 +15324,7 @@ msgstr ""
 msgid ""
 "\n"
 "    %(inviter)s has invited you to join the %(domain)s project space at "
-"CommCareHQ.\n"
+"CommCare HQ.\n"
 "    This invitation expires in %(days)s day(s).\n"
 msgstr ""
 
@@ -15358,7 +15338,7 @@ msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_invite.txt
 msgid ""
-"CommCareHQ is a data management tool used by over 500 organizations to help "
+"CommCare HQ is a data management tool used by over 500 organizations to help "
 "frontline workers around the world."
 msgstr ""
 
@@ -15367,7 +15347,7 @@ msgid ""
 "\n"
 "    If you think you have received this by mistake, you can go ahead and "
 "ignore this email.\n"
-"    To find out more about CommCareHQ visit http://www.commcarehq.org/.\n"
+"    To find out more about CommCare HQ visit http://www.commcarehq.org/.\n"
 msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_invite.txt
@@ -15377,7 +15357,7 @@ msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_invite.txt
 #: corehq/apps/domain/templates/domain/email/domain_request_approval.txt
-msgid "-The CommCareHQ team"
+msgid "-The CommCare HQ team"
 msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_request_approval.html
@@ -15440,13 +15420,13 @@ msgstr ""
 msgid ""
 "\n"
 "    %(inviter)s has approved your request to join the %(domain)s project "
-"space on CommCareHQ.\n"
+"space on CommCare HQ.\n"
 "    This approval expires in %(days)s day(s).\n"
 msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_request_approval.txt
 msgid ""
-"CommCareHQ is a tool that helps manage frontline workers around the world."
+"CommCare HQ is a tool that helps manage frontline workers around the world."
 msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_request_approval.txt
@@ -15458,7 +15438,7 @@ msgstr ""
 msgid ""
 "\n"
 "    If you think this is a mistake, you can go ahead and ignore this email.\n"
-"    To find out more about CommCareHQ visit http://www.commcarehq.org/.\n"
+"    To find out more about CommCare HQ visit http://www.commcarehq.org/.\n"
 msgstr ""
 
 #: corehq/apps/domain/templates/domain/email/domain_transfer_from_request.html
@@ -15518,8 +15498,8 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"    %(from_username)s has initiatied a transfer of ownership for a "
-"CommCareHQ project space. To accept\n"
+"    %(from_username)s has initiatied a transfer of ownership for a CommCare "
+"HQ project space. To accept\n"
 "    ownership of this project space, please follow <a href=\"%(activate_url)s"
 "\">this link</a>: %(activate_url)s.  If you do not already have a CommCare "
 "user account, you will be required to create one in order to accept "
@@ -15549,7 +15529,7 @@ msgstr ""
 msgid ""
 "\n"
 "    If you think you have received this by mistake, you can go ahead and "
-"ignore this email. To find out more about CommCareHQ visit <a href=\"http://"
+"ignore this email. To find out more about CommCare HQ visit <a href=\"http://"
 "www.commcarehq.org/\">http://www.commcarehq.org/</a>.\n"
 "  "
 msgstr ""
@@ -15558,7 +15538,7 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"%(from_username)s has initiatied a transfer of ownership for a CommCareHQ "
+"%(from_username)s has initiatied a transfer of ownership for a CommCare HQ "
 "project space. To accept ownership of this project space, please follow this "
 "link: %(activate_url)s.  If you do not already have a CommCare user account, "
 "you will be required to create one in order to accept ownership of this "
@@ -15585,7 +15565,7 @@ msgstr ""
 msgid ""
 "\n"
 "If you think you have received this by mistake, you can go ahead and ignore "
-"this email. To find out more about CommCareHQ visit http://www.commcarehq."
+"this email. To find out more about CommCare HQ visit http://www.commcarehq."
 "org/.\n"
 msgstr ""
 
@@ -16878,7 +16858,7 @@ msgstr ""
 msgid ""
 "\n"
 "    Thanks, <br />\n"
-"    CommCareHQ Team\n"
+"    CommCare HQ Team\n"
 "  "
 msgstr ""
 
@@ -16894,7 +16874,7 @@ msgstr ""
 msgid ""
 "\n"
 "Thanks,\n"
-"CommCareHQ Team\n"
+"CommCare HQ Team\n"
 msgstr ""
 
 #: corehq/apps/dropbox/templates/dropbox/emails/upload_success.html
@@ -22171,10 +22151,6 @@ msgstr ""
 
 #: corehq/apps/hqwebapp/templates/hqwebapp/partials/mobile_ux_warning.html
 msgid "Email Link"
-msgstr ""
-
-#: corehq/apps/hqwebapp/templates/hqwebapp/partials/mobile_ux_warning.html
-msgid "CommCareHQ looks better on desktop!"
 msgstr ""
 
 #: corehq/apps/hqwebapp/templates/hqwebapp/partials/mobile_ux_warning.html
@@ -28565,7 +28541,7 @@ msgstr ""
 msgid ""
 "The privacy and protection of personal data is very important to Dimagi.  "
 "Dimagi is not responsible for privacy of reports or SMS data you transmit "
-"from CommCareHQ to external parties.  However, to protect privacy, we "
+"from CommCare HQ to external parties.  However, to protect privacy, we "
 "suggest that you include a message like the following in your communications "
 "(for instance, by including in the saved report description)"
 msgstr ""
@@ -28720,8 +28696,8 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"      This is a %(report_type)s from <a href=\"%(DNS_name)s\">CommCareHQ</a> "
-"for the project '%(domain)s'.\n"
+"      This is a %(report_type)s from <a href=\"%(DNS_name)s\">CommCare HQ</"
+"a> for the project '%(domain)s'.\n"
 "    "
 msgstr ""
 
@@ -28742,7 +28718,7 @@ msgstr ""
 msgid ""
 "\n"
 "      You are receiving this automated email from <a href=\"%(DNS_name)s"
-"\">CommCareHQ</a>\n"
+"\">CommCare HQ</a>\n"
 "      because the user %(owner_name)s added you as a recipient of their "
 "report.\n"
 "    "
@@ -30751,7 +30727,7 @@ msgid ""
 "\n"
 "  <p>\n"
 "    Thanks,<br />\n"
-"    CommCareHQ\n"
+"    CommCare HQ\n"
 "  </p>\n"
 msgstr ""
 
@@ -31385,6 +31361,18 @@ msgid "Post Logout Redirect URIs"
 msgstr ""
 
 #: corehq/apps/sso/forms.py
+msgid "Sign-in redirect URIs "
+msgstr ""
+
+#: corehq/apps/sso/forms.py
+msgid "Sign-out redirect URIs"
+msgstr ""
+
+#: corehq/apps/sso/forms.py
+msgid "Initiate login URI"
+msgstr ""
+
+#: corehq/apps/sso/forms.py
 msgid "Identifier (Entity ID)"
 msgstr ""
 
@@ -31580,6 +31568,10 @@ msgstr ""
 
 #: corehq/apps/sso/forms.py
 msgid "Issuer URL"
+msgstr ""
+
+#: corehq/apps/sso/forms.py
+msgid "Issuer URI"
 msgstr ""
 
 #: corehq/apps/sso/forms.py
@@ -35279,7 +35271,7 @@ msgid ""
 "\n"
 "  <p>\n"
 "    Thanks,<br />\n"
-"    CommCareHQ\n"
+"    CommCare HQ\n"
 "  </p>\n"
 msgstr ""
 
@@ -35292,7 +35284,7 @@ msgid ""
 "You may now visit %(url)s.\n"
 "\n"
 "Thanks,\n"
-"CommCareHQ\n"
+"CommCare HQ\n"
 msgstr ""
 
 #: corehq/apps/users/templates/users/email/request_domain_access.html
@@ -35310,7 +35302,7 @@ msgid ""
 "\n"
 "  <p>\n"
 "    Thanks,<br />\n"
-"    CommCareHQ\n"
+"    CommCare HQ\n"
 "  </p>\n"
 msgstr ""
 
@@ -35324,7 +35316,7 @@ msgid ""
 "To approve or delete this request, visit %(url)s.\n"
 "\n"
 "Thanks,\n"
-"CommCareHQ\n"
+"CommCare HQ\n"
 msgstr ""
 
 #: corehq/apps/users/templates/users/enterprise_users.html
@@ -35791,6 +35783,14 @@ msgid "Select which reports the role can access:"
 msgstr ""
 
 #: corehq/apps/users/templates/users/partials/edit_role_modal.html
+msgid "Download and Email Reports"
+msgstr ""
+
+#: corehq/apps/users/templates/users/partials/edit_role_modal.html
+msgid "Allow role to download and email report data."
+msgstr ""
+
+#: corehq/apps/users/templates/users/partials/edit_role_modal.html
 msgid "Access Specific Tableau Reports"
 msgstr ""
 
@@ -35908,14 +35908,6 @@ msgstr ""
 
 #: corehq/apps/users/templates/users/partials/edit_role_modal.html
 msgid "Select which other roles can assign this role:"
-msgstr ""
-
-#: corehq/apps/users/templates/users/partials/edit_role_modal.html
-msgid "Download and Email Reports"
-msgstr ""
-
-#: corehq/apps/users/templates/users/partials/edit_role_modal.html
-msgid "Allow role to download and email report data."
 msgstr ""
 
 #: corehq/apps/users/templates/users/partials/manage_my_numbers.html
@@ -38488,7 +38480,7 @@ msgstr ""
 msgid ""
 "\n"
 "                Enter the phone number of a different phone below and click "
-"Send to send a test SMS from CommCareHQ.\n"
+"Send to send a test SMS from CommCare HQ.\n"
 "                "
 msgstr ""
 
@@ -38658,7 +38650,7 @@ msgstr ""
 msgid ""
 "\n"
 "                An error occurred. This can happen if it has been longer "
-"than one week since you started the Telerivet setup process in CommCareHQ.\n"
+"than one week since you started the Telerivet setup process in CommCare HQ.\n"
 "                Please restart the setup process and if the problem "
 "persists, please report an issue.\n"
 "                "
@@ -39258,10 +39250,8 @@ msgid "Payload must be valid JSON"
 msgstr ""
 
 #: corehq/motech/generic_inbound/utils.py
-#, fuzzy
-#| msgid "Unknown user"
 msgid "Unknown user type"
-msgstr "अनजान उपयोगकर्ता"
+msgstr ""
 
 #: corehq/motech/generic_inbound/views.py
 msgid "Inbound API Configurations"
